08_Networking/27-03_Namespace/web10-netpol.yaml
# Exercise 20-03 v1.0.0
#
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web10-netpol
  namespace: devstore-ns
spec:
  podSelector:
    matchLabels:
      pod: web10-pod
  policyTypes:
    - Ingress
    - Egress
  ingress: 
    - from:
      - podSelector:
          matchLabels:
            pod: app10-pod
      ports:
        - protocol: TCP
          port: 80 
  egress:
    - to:
      - podSelector:
          matchLabels: 
            pod: db10-pod 
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: database-ns
      ports:
        - protocol: TCP
          port: 6379
